syntax="proto3";

package users;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";


option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

message User{
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string role = 5;
    string status = 6;
    string created_at = 7;
    string updated_at = 8;
    string deleted_at = 9;
}
// Generated according to https://cloud.google.com/apis/design/standard_methods
service UserService {
  // rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
  //   option (google.api.http) = {
  //     get: "/v1alpha1/Users"
  //   };
  // }

  rpc GetUser(GetUserRequest) returns (User) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=Users/*}"
    };
  }

  // rpc CreateUser(CreateUserRequest) returns (User) {
  //   option (google.api.http) = {
  //     post: "/v1alpha1/Users"
  //     body: "User"
  //   };
  // }

  // rpc UpdateUser(UpdateUserRequest) returns (User) {
  //   option (google.api.http) = {
  //     patch: "/v1alpha1/{User.name=Users/*}"
  //     body: "User"
  //   };
  // }

  // rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {
  //   option (google.api.http) = {
  //     delete: "/v1alpha1/{name=Users/*}"
  //   };
  // }
}

// message User {
// ! This should be defined elsewhere
// }

message ListUsersRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListUsersResponse {
  // The field name should match the noun "User" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated User Users = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetUserRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateUserRequest {
  // The parent resource name where the User is to be created.
  string parent = 1;

  // The User id to use for this User.
  string User_id = 2;

  // The User resource to create.
  // The field name should match the Noun in the method name.
  User User = 3;
}

message UpdateUserRequest {
  // The User resource which replaces the resource on the server.
  User User = 1;

  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
   google.protobuf.FieldMask update_mask = 2;
}

message DeleteUserRequest {
  // The resource name of the User to be deleted.
  string name = 1;
}
